doctors routes about routes all routes are set navigation routes are set styling more to come
doctors routes
about routes
all routes are set
navigation routes are set
styling
more to come

--- a/doctorsgonovski/resources/sass/styles.scss
+++ b/doctorsgonovski/resources/sass/styles.scss
@@ -854,9 +854,9 @@ body {
     padding: 8px 24px;
   }
 
-  .breadcrumb {
-    background-color: #f8f9fa;
-  }
+//   .breadcrumb {
+//     background-color: #f8f9fa;
+//   }
 
   .breadcrumb-dark .breadcrumb-item a {
     color: #00D9A5;
