--- a/doctorsgonovski/resources/sass/app.scss
+++ b/doctorsgonovski/resources/sass/app.scss
@@ -4,9 +4,7 @@
 //Carosel
 @import "~owl.carousel/dist/assets/owl.carousel";
 
-@import "~wowjs/css/libs/animate.css";
-
-
+@import '~animate.css/animate.min.css';
 
 // Font-Awesome
 
