--- a/doctorsgonovski/resources/sass/styles.scss
+++ b/doctorsgonovski/resources/sass/styles.scss
@@ -1914,3 +1914,9 @@ i.fa-brands {
 // .page-footer h5 {
 //     margin-bottom: 0.5rem; /* Adjust spacing as per preference */
 // }
+
+
+.alert-orange {
+    background-color: #FFA500;
+    color: white;
+}
