--- a/doctorsgonovski/resources/sass/styles.scss
+++ b/doctorsgonovski/resources/sass/styles.scss
@@ -1920,3 +1920,11 @@ i.fa-brands {
     background-color: #FFA500;
     color: white;
 }
+
+
+/* This will apply styles for screens smaller than 768px in width, typically tablets and mobile devices. Adjust the value if necessary */
+// @media (max-width: 767px) {
+//     .page-hero {
+//         background-image: none !important;
+//     }
+// }
