--- a/doctorsgonovski/resources/sass/styles.scss
+++ b/doctorsgonovski/resources/sass/styles.scss
@@ -1925,6 +1925,6 @@ i.fa-brands {
 /* This will apply styles for screens smaller than 768px in width, typically tablets and mobile devices. Adjust the value if necessary */
 // @media (max-width: 767px) {
 //     .page-hero {
-//         background-image: none !important;
+//         background-image: url("../../public/images/doctors/doctor_1.jpg") !important
 //     }
 // }
