--- a/doctorsgonovski/public/css/app.css
+++ b/doctorsgonovski/public/css/app.css
@@ -22577,7 +22577,7 @@ a:hover {
 }
 
 .text-sm {
-  font-size: 14px !important;
+  font-size: 12px !important;
 }
 
 .text-md {
@@ -23880,7 +23880,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .card-doctor .body {
-  padding: 15px 20px;
+  padding: 4px 20px;
 }
 
 @media (min-width: 768px) {
@@ -24394,6 +24394,56 @@ i.fa-brands {
 .alert-orange {
   background-color: #FFA500;
   color: white;
+}
+
+.card-img-custom {
+  max-width: 100%;
+}
+
+.text-grey-custom {
+  color: grey;
+}
+
+.mb-0-custom {
+  margin-bottom: 0;
+}
+
+.text-sm-custom {
+  font-size: 12px;
+}
+
+.heading-custom {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.ul-style-custom {
+  list-style-type: disc;
+  padding-left: 1rem;
+}
+
+.ul-li-custom {
+  font-size: 12px;
+  margin-bottom: 0.25rem;
+}
+
+.description-custom {
+  font-size: 12px;
+  margin-bottom: 0.5rem;
+}
+
+.description-section-custom {
+  font-size: 12px;
+}
+
+.description-strong-custom {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.description-p-custom {
+  margin-bottom: 0.5rem;
 }
 
 /* This will apply styles for screens smaller than 768px in width, typically tablets and mobile devices. Adjust the value if necessary */
