--- a/doctorsgonovski/resources/sass/styles.scss
+++ b/doctorsgonovski/resources/sass/styles.scss
@@ -50,7 +50,7 @@ body {
   }
 
   .text-sm {
-    font-size: 14px !important;
+    font-size: 12px !important;
   }
 
   .text-md {
@@ -1380,7 +1380,7 @@ body {
   }
 
   .card-doctor .body {
-    padding: 15px 20px;
+    padding: 4px 20px;
   }
 
   @media (min-width: 768px) {
@@ -1921,6 +1921,57 @@ i.fa-brands {
     color: white;
 }
 
+
+
+.card-img-custom {
+    max-width: 100%;
+}
+
+.text-grey-custom {
+    color: grey;
+}
+
+.mb-0-custom {
+    margin-bottom: 0;
+}
+
+.text-sm-custom {
+    font-size: 12px;
+}
+
+.heading-custom {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.ul-style-custom {
+    list-style-type: disc;
+    padding-left: 1rem;
+}
+
+.ul-li-custom {
+    font-size: 12px;
+    margin-bottom: 0.25rem;
+}
+
+.description-custom {
+    font-size: 12px;
+    margin-bottom: 0.5rem;
+}
+
+.description-section-custom {
+    font-size: 12px;
+}
+
+.description-strong-custom {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+}
+
+.description-p-custom {
+    margin-bottom: 0.5rem;
+}
 
 /* This will apply styles for screens smaller than 768px in width, typically tablets and mobile devices. Adjust the value if necessary */
 // @media (max-width: 767px) {
