--- a/doctorsgonovski/resources/sass/styles.scss
+++ b/doctorsgonovski/resources/sass/styles.scss
@@ -1986,3 +1986,12 @@ i.fa-brands {
 //         background-image: url("../../public/images/doctors/doctor_1.jpg") !important
 //     }
 // }
+
+//
+
+
+.carousel-inner img {
+    max-width: 500px;
+    max-height: 500px;
+    margin: auto;
+}
