--- a/doctorsgonovski/resources/sass/styles.scss
+++ b/doctorsgonovski/resources/sass/styles.scss
@@ -1276,13 +1276,20 @@ body {
     line-height: normal;
     background-color: #fff;
     border-radius: 4px;
-    box-shadow: 0 2px 6px rgba(154, 159, 151, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: 0.3s;
   }
 
   .card-service p {
     margin-top: 10px;
     margin-left: 32px;
   }
+
+
+.card-service:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
 
   .circle-shape {
     flex-shrink: 0;
@@ -1294,6 +1301,7 @@ body {
     text-align: center;
     font-size: 32px;
   }
+
 
   #doctorSlideshow .owl-nav {
     margin-top: 24px;
@@ -1980,18 +1988,33 @@ i.fa-brands {
     margin-bottom: 0.5rem;
 }
 
-/* This will apply styles for screens smaller than 768px in width, typically tablets and mobile devices. Adjust the value if necessary */
-// @media (max-width: 767px) {
-//     .page-hero {
-//         background-image: url("../../public/images/doctors/doctor_1.jpg") !important
-//     }
-// }
-
-//
-
 
 .carousel-inner img {
     max-width: 500px;
     max-height: 500px;
     margin: auto;
+}
+
+.carousel-item {
+    height: 500px; /* Adjust based on your preference */
+    overflow: hidden;
+}
+
+.carousel-item img {
+    height: 100%;
+    width: auto;
+    max-width: none;
+}
+
+.custom-h1-style {
+    font-size: 1.5rem;
+    line-height: 1.4;
+    text-align: center;
+    margin: 0 auto 20px auto;
+    max-width: 750px;
+    color: #333;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
