--- a/doctorsgonovski/resources/sass/variables.scss
+++ b/doctorsgonovski/resources/sass/variables.scss
@@ -1,7 +1,28 @@
-.font-lato {
-    font-family: 'Lato', sans-serif;
+.font-roboto-serif {
+    font-family: 'Roboto Serif', serif;
 }
 
-.font-open-sans {
-    font-family: 'Open Sans', sans-serif;
+.font-rubik {
+    font-family: 'Rubik', sans-serif;
+}
+
+.font-roboto {
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.font-2rem {
+    font-size: 2rem;
+}
+
+.font-07em {
+    font-size: 0.7em;
+}
+
+.font-8em {
+    font-size: 0.875em;
+}
+
+.font-11em {
+    font-size: 0.6875em;
 }
