--- a/doctorsgonovski/public/css/app.css
+++ b/doctorsgonovski/public/css/app.css
@@ -24469,14 +24469,15 @@ i.fa-brands {
 }
 
 .carousel-item {
-  height: 500px; /* Adjust based on your preference */
+  height: auto;
   overflow: hidden;
 }
 
 .carousel-item img {
-  height: 100%;
-  width: auto;
-  max-width: none;
+  max-width: 100%;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .custom-h1-style {
